# SCGB

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt  makefile
assets/: aatest.aa  background.aa  cloud.aa  default.pal  ebi.aa  heli.aa  hero.aa  human.aa  roflcopter.aa  test.aa
class/: AABox.hpp  AAfile.hpp  AAtext.h  AAtext.hpp  Animation.hpp  Attribute.hpp  BMimage.h  BMimage.hpp  BaseContainer.hpp  BaseController.hpp  BaseModel.hpp  BaseView.hpp  BaseWindow.h  BaseWindow.hpp  BitMapImageFile.hpp  Block.hpp  Border.hpp  Boundary.hpp  Clock.h  Clock.hpp  Color.hh  Color.hpp  CompositeDrawingComponent.hpp  CompoundController.hpp  CompoundView.hpp  Coordinate.hpp  CursesManager.hpp  Cursor.hpp  DCHandler.hpp  Decorator.h  DrawText.hpp  Drawable.h  DrawingComponent.hpp  ELHandler.hpp  EventListner.h  EventListner.hpp  GCMovable.h  GOMovable.h  GOMovable.hpp  GWEventListner.hpp  (+49 more)
cpp/: AAtext.cpp  BMimage.cpp  BaseWindow.cpp  Clock.cpp  Color.cpp  Heli.cpp  InputBox.cpp  InputMap.cpp  Movable.cpp  PlainWindow.cpp  Screen.cpp  UserInput.cpp  Utility.cpp  WindowContainer.cpp  main.cpp
cpp/demo/: main.cpp
demo/: #TestScene.hpp#  .#TestScene.hpp  Camera.hpp  ColorTestScene.hpp  GameContext.hpp  MainScene.hpp  Makefile  Map3D.hpp  MapBox.hpp  MapData.hpp  Parts.hpp  Scene.hpp  SceneManager.hpp  TestScene.hpp  TitleScene.hpp  demo  main.cpp  test.cpp  test.txt
demo/assets/: Coin.txt  Floor2.txt  FloorL.txt  FloorR.txt  FrontWall1.txt  FrontWall2.txt  LeftWall1.txt  LeftWall2.txt  LeftWallBetween.txt  LeftWallBetween2.txt  Logo.txt  Map.txt  RightWall1.txt  RightWall2.txt  RightWallBetween.txt  RightWallBetween2.txt  Straight.txt  TestAnimation.txt  TitleLogo.txt  defender.txt  invader1.txt  invader2.txt  invader3.txt  pika.txt  roflcopter.txt  roflcopter2.txt  testwall.txt  ufo.txt
demo/include/: Bullet.hpp  Controller.hpp  ControllerManager.hpp  Defender.hpp  DefenderBullet.hpp  DefenderView.hpp  Enemy.hpp  EnemyBullet.hpp  EnemyView.hpp  GameController.hpp  GameModel.hpp  GameScene.hpp  Scene.hpp  SceneManager.hpp  Shield.hpp  ShieldView.hpp  Textures.hpp  TitleController.hpp  TitleScene.hpp  View.hpp
include/: define.h  scgb.h
